--- a/Google_Colab/Examples_with_Google_Colab.ipynb
+++ b/Google_Colab/Examples_with_Google_Colab.ipynb
@@ -8825,12 +8825,12 @@
         "FROM monthly_revenue\n"
       ],
       "metadata": {
-        "id": "jsM5Bl7VJNmb",
-        "outputId": "0a9738b8-4893-49a3-d1ac-5b262fff9e57",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 460
-        }
+        },
+        "id": "jsM5Bl7VJNmb",
+        "outputId": "0a9738b8-4893-49a3-d1ac-5b262fff9e57"
       },
       "execution_count": 16,
       "outputs": [
@@ -9286,12 +9286,12 @@
         "FROM monthly_revenue\n"
       ],
       "metadata": {
-        "id": "QilrSyK-MyAq",
-        "outputId": "d1fa5a80-e655-4917-bfea-079314d87ac9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 460
-        }
+        },
+        "id": "QilrSyK-MyAq",
+        "outputId": "d1fa5a80-e655-4917-bfea-079314d87ac9"
       },
       "execution_count": 22,
       "outputs": [
@@ -9677,6 +9677,7 @@
       "source": [
         "%%sql\n",
         "\n",
+        "-- cohort year life cycle time value change rate\n",
         "WITH yearly_cohort AS (\n",
         "  SELECT\n",
         "    customerkey,\n",
@@ -9706,12 +9707,12 @@
         "\n"
       ],
       "metadata": {
-        "id": "VU9o-gk6OECI",
-        "outputId": "9cbcd969-44c0-4efc-9435-3709b2a0bcbb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 398
-        }
+        },
+        "id": "VU9o-gk6OECI",
+        "outputId": "9cbcd969-44c0-4efc-9435-3709b2a0bcbb"
       },
       "execution_count": 30,
       "outputs": [
